--- a/slide1.html
+++ b/slide1.html
@@ -220,7 +220,7 @@
         <div class="absolute bottom-4 sm:bottom-8 left-1/2 transform -translate-x-1/2 z-10">
             <div class="footer-content flex items-center">
                 <!-- Logo da empresa -->
-                <img src="assets/logo.png" alt="logo" class="logo object-contain mr-2 sm:mr-4">
+                <img src="logo.png" alt="logo" class="logo object-contain mr-2 sm:mr-4">
                 <!-- Nome/slogan da empresa -->
                 <div class="company-text font-semibold tracking-wide">MR Soluções Digitais</div>
             </div>
